k8s/test/hello-app1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  annotations:
    # must be created security policy in advance.
    cloud.google.com/backend-config: '{"ports": {"server":"hello-app1-backendconfig"}}'
